Fix scrolling on mobile devices

--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -1,6 +1,6 @@
 
 .nav-button-spacer {
-  grid-area: nav;
+  height: 10vh;
 }
 
 nav {
